--- a/index.html
+++ b/index.html
@@ -4,106 +4,44 @@
   <meta charset="UTF-8" />
   <title>UDIP—FA Viewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- Modern font -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap" rel="stylesheet">
-
   <style>
     :root{
-      /* Default visible height for the brain-image area.
-         Increase (e.g., 620–700px) to make the viewer taller by default. */
+      /* Default visible height; JS will auto-fit to embedded content anyway */
       --viewerBoxHeight: 420px;
     }
+    *{box-sizing:border-box;margin:0;padding:0;}
+    body{font-family:'Roboto',sans-serif;background:#f5f7fa;color:#333;height:100vh;display:flex;flex-direction:column;}
+    header{background:#fff;padding:10px 20px;box-shadow:0 2px 4px rgba(0,0,0,.1);display:flex;align-items:center;}
+    header img{height:50px;object-fit:contain;}
+    #container{display:flex;flex:1;overflow:hidden;}
+    #mask-select-container{width:220px;background:#fff;padding:20px;border-right:1px solid #e0e0e0;box-shadow:2px 0 8px rgba(0,0,0,.05);}
+    #mask-select-container h3{font-size:16px;font-weight:500;margin-bottom:12px;color:#444;}
+    #mask-select{width:100%;padding:10px;font-size:14px;border:1px solid #ccd0d5;border-radius:4px;appearance:none;
+      background:url('data:image/svg+xml;utf8,<svg fill="%23666" height="12" viewBox="0 0 24 24" width="12" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 12px center;
+      background-color:#fff;background-size:12px;cursor:pointer;box-shadow:inset 0 1px 3px rgba(0,0,0,.05);transition:border-color .2s;}
+    #mask-select:hover{border-color:#a0a8b0;}
+    #mask-select:focus{border-color:#5b9dd9;outline:none;box-shadow:0 0 0 3px rgba(91,157,217,.3);}
 
-    /* ===== Global reset & base typography ===== */
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Roboto', sans-serif;
-      background: #f5f7fa;
-      color: #333;
-      height: 100vh;
-      display: flex;
-      flex-direction: column;
-    }
+    #main-panel{flex:1;display:flex;flex-direction:column;background:#fff;margin:20px;border-radius:4px;box-shadow:0 2px 8px rgba(0,0,0,.1);overflow:hidden;}
+    #viewer-container{min-height:var(--viewerBoxHeight);border-bottom:1px solid #e0e0e0;background:#fff;}
+    /* No transform/scale here — show pixels 1:1 from the embedded page */
+    #mask-viewer{width:100%;height:var(--viewerBoxHeight);border:none;display:block;}
 
-    /* ===== Header with logo ===== */
-    header {
-      background: #fff;
-      padding: 10px 20px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      display: flex;
-      align-items: center;
-    }
-    header img { height: 50px; object-fit: contain; }
+    #table-container{flex:1;overflow:auto;padding:12px;background:#fafafa;}
+    #table-container table{width:100%;border-collapse:collapse;font-variant-numeric:tabular-nums;}
+    #table-container th,#table-container td{border:1px solid #ddd;padding:8px 10px;font-size:12px;}
+    #table-container th{background:#f1f1f1;font-weight:500;position:sticky;top:0;z-index:1;}
+    #table-container tbody tr:nth-child(even){background:#fcfcfc;}
+    #table-container td{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
 
-    /* ===== Two-column layout (left selector, right content) ===== */
-    #container { display: flex; flex: 1; overflow: hidden; }
+    footer{background:#fff;padding:10px 20px;font-size:12px;color:#666;text-align:center;border-top:1px solid #e0e0e0;box-shadow:0 -2px 4px rgba(0,0,0,.05);}
+    footer a{color:#007acc;text-decoration:none;} footer a:hover{text-decoration:underline;}
 
-    /* Left: mask selector */
-    #mask-select-container {
-      width: 220px; background: #fff; padding: 20px;
-      border-right: 1px solid #e0e0e0; box-shadow: 2px 0 8px rgba(0,0,0,0.05);
-    }
-    #mask-select-container h3 { font-size: 16px; font-weight: 500; margin-bottom: 12px; color: #444; }
-    #mask-select {
-      width: 100%; padding: 10px; font-size: 14px;
-      border: 1px solid #ccd0d5; border-radius: 4px; appearance: none;
-      /* custom dropdown arrow */
-      background:
-        url('data:image/svg+xml;utf8,<svg fill="%23666" height="12" viewBox="0 0 24 24" width="12" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>')
-        no-repeat right 12px center;
-      background-color: #fff; background-size: 12px; cursor: pointer;
-      box-shadow: inset 0 1px 3px rgba(0,0,0,0.05); transition: border-color .2s;
-    }
-    #mask-select:hover { border-color: #a0a8b0; }
-    #mask-select:focus { border-color: #5b9dd9; outline: none; box-shadow: 0 0 0 3px rgba(91,157,217,0.3); }
-
-    /* Right: top viewer + bottom CSV table */
-    #main-panel {
-      flex: 1; display: flex; flex-direction: column; background: #fff;
-      margin: 20px; border-radius: 4px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); overflow: hidden;
-    }
-
-    /* Top: brain-image viewer (embedded page is scaled to fully fit) */
-    #viewer-container {
-      height: var(--viewerBoxHeight);
-      border-bottom: 1px solid #e0e0e0;
-      overflow: hidden;            /* no scrollbars for the viewer area */
-      position: relative;
-      background: #fff;
-    }
-    /* Wrapper used for scaling the embedded page */
-    #viewer-scale {
-      position: absolute; left: 0; top: 0;
-      transform-origin: top left;  /* scale from top-left corner */
-    }
-    #mask-viewer { width: 100%; height: 100%; border: none; display: block; }
-
-    /* Bottom: CSV table */
-    #table-container {
-      flex: 1; overflow: auto; padding: 12px; background: #fafafa;
-    }
-    #table-container table { width: 100%; border-collapse: collapse; font-variant-numeric: tabular-nums; }
-    #table-container th, #table-container td { border: 1px solid #ddd; padding: 8px 10px; font-size: 12px; }
-    #table-container th { background: #f1f1f1; font-weight: 500; position: sticky; top: 0; z-index: 1; }
-    #table-container tbody tr:nth-child(even) { background: #fcfcfc; }
-    #table-container td { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-
-    /* ===== Footer ===== */
-    footer {
-      background: #fff; padding: 10px 20px; font-size: 12px; color: #666; text-align: center;
-      border-top: 1px solid #e0e0e0; box-shadow: 0 -2px 4px rgba(0,0,0,0.05);
-    }
-    footer a { color: #007acc; text-decoration: none; }
-    footer a:hover { text-decoration: underline; }
-
-    /* ===== Responsive ===== */
-    @media (max-width: 900px) {
-      #container { flex-direction: column; }
-      #mask-select-container {
-        width: auto; display: flex; align-items: center; gap: 12px;
-        border-right: none; border-bottom: 1px solid #e0e0e0; box-shadow: none;
-      }
-      #main-panel { margin: 10px; }
+    @media (max-width:900px){
+      #container{flex-direction:column;}
+      #mask-select-container{width:auto;display:flex;align-items:center;gap:12px;border-right:none;border-bottom:1px solid #e0e0e0;box-shadow:none;}
+      #main-panel{margin:10px;}
     }
   </style>
 </head>
@@ -115,19 +53,14 @@
   <div id="container">
     <div id="mask-select-container">
       <h3>Select a dimension for visualization</h3>
-      <select id="mask-select">
-        <option value="">-- choose a mask --</option>
-      </select>
+      <select id="mask-select"><option value="">-- choose a mask --</option></select>
     </div>
 
     <div id="main-panel">
-      <!-- Viewer area (the embedded page is scaled to fit without scrolling) -->
+      <!-- No scaling; the script will auto-size the iframe height to the embedded content -->
       <div id="viewer-container">
-        <div id="viewer-scale">
-          <iframe id="mask-viewer" name="maskFrame" src="" allowfullscreen></iframe>
-        </div>
+        <iframe id="mask-viewer" name="maskFrame" src="" allowfullscreen></iframe>
       </div>
-      <!-- CSV table renders here -->
       <div id="table-container"></div>
     </div>
   </div>
@@ -140,134 +73,76 @@
   </footer>
 
   <script>
-    /* ===== Paths (relative to this HTML file) ===== */
-    const htmlBase = '3d_html_masks';  // e.g., 3d_html_masks/Dim_0.html
+    // ---- Paths relative to this HTML file ----
+    const htmlBase = '3d_html_masks';  // e.g., 3d_html_masks/Dim_0.html  (regenerated with large width_view)
     const csvBase  = 'WM_stat';        // e.g., WM_stat/Dim_0.csv
 
-    /* Build dropdown: label = Dim1…Dim128 (shown), value = Dim_0…Dim_127 (file base) */
-    const masks = Array.from({ length: 128 }, (_, i) => ({ label: `Dim${i + 1}`, value: `Dim_${i}` }));
-
-    const selectEl       = document.getElementById('mask-select');
-    const maskFrame      = document.getElementById('mask-viewer');
-    const scaleWrapper   = document.getElementById('viewer-scale');
-    const viewerBox      = document.getElementById('viewer-container');
+    // Build dropdown list
+    const masks = Array.from({ length: 128 }, (_, i) => ({ label:`Dim${i+1}`, value:`Dim_${i}` }));
+    const selectEl = document.getElementById('mask-select');
+    const maskFrame = document.getElementById('mask-viewer');
+    const viewerBox = document.getElementById('viewer-container');
     const tableContainer = document.getElementById('table-container');
 
-    masks.forEach(({ label, value }) => {
-      const opt = document.createElement('option');
-      opt.value = value; opt.textContent = label;
-      selectEl.appendChild(opt);
+    masks.forEach(({label,value})=>{
+      const opt=document.createElement('option'); opt.value=value; opt.textContent=label; selectEl.appendChild(opt);
     });
 
-    /* Standardized display headers for the CSV (use your preferred labels) */
-    const DISPLAY_HEADER = ['WM tracts', 'Abbreviation', 'observed T value', 'P value'];
+    const DISPLAY_HEADER = ['WM tracts','Abbreviation','observed T value','P value'];
 
-    /* Render a 2D array into a HTML table inside #table-container */
-    function renderTable(rows) {
-      const tbl = document.createElement('table');
-      const theadRow = tbl.createTHead().insertRow();
-      rows[0].forEach(c => { const th = document.createElement('th'); th.textContent = c; theadRow.appendChild(th); });
-      const tbody = tbl.createTBody();
-      rows.slice(1).forEach(r => { const tr = tbody.insertRow(); r.forEach(c => { const td = tr.insertCell(); td.textContent = c; }); });
-      tableContainer.innerHTML = ''; tableContainer.appendChild(tbl);
+    function renderTable(rows){
+      const tbl=document.createElement('table');
+      const theadRow=tbl.createTHead().insertRow();
+      rows[0].forEach(c=>{ const th=document.createElement('th'); th.textContent=c; theadRow.appendChild(th); });
+      const tbody=tbl.createTBody();
+      rows.slice(1).forEach(r=>{ const tr=tbody.insertRow(); r.forEach(c=>{ const td=tr.insertCell(); td.textContent=c; }); });
+      tableContainer.innerHTML=''; tableContainer.appendChild(tbl);
     }
 
-    /* Fit & scale the embedded page.
-       NEW: allow scale > 1 to enlarge when the embedded page is small.
-       If we enlarge or enforce a minimum scale, auto-raise the container height so the whole page stays visible. */
-    function fitEmbeddedViewer() {
-      try {
-        const doc  = maskFrame.contentDocument || maskFrame.contentWindow?.document;
-        if (!doc) return;
+    // Auto-fit iframe height to the embedded document (same-origin)
+    function fitIframeToContent(){
+      try{
+        const doc = maskFrame.contentDocument || maskFrame.contentWindow?.document;
+        if(!doc) return;
+        const el = doc.documentElement, body = doc.body;
+        const h = Math.max(el.scrollHeight, el.offsetHeight, el.clientHeight,
+                           body?.scrollHeight||0, body?.offsetHeight||0, body?.clientHeight||0);
+        // Set iframe height to content height (no scrollbars, no scaling)
+        maskFrame.style.height = h + 'px';
 
-        // Intrinsic content size of the embedded page
-        const el   = doc.documentElement;
-        const body = doc.body;
-        const contentW = Math.max(el.scrollWidth, el.offsetWidth, el.clientWidth,
-                                  body?.scrollWidth || 0, body?.offsetWidth || 0, body?.clientWidth || 0);
-        const contentH = Math.max(el.scrollHeight, el.offsetHeight, el.clientHeight,
-                                  body?.scrollHeight || 0, body?.offsetHeight || 0, body?.clientHeight || 0);
-
-        // Available box size (current viewer container)
-        const boxW = viewerBox.clientWidth;
-        const boxH = viewerBox.clientHeight;
-
-        // Fit scale (can be > 1 to ENLARGE when content is smaller than the box)
-        let scaleFit = Math.min(boxW / contentW, boxH / contentH);
-
-        // Clamp to a sane range
-        const MIN_SCALE = 0.80;  // don't go tinier than this
-        const MAX_SCALE = 2.50;  // avoid extreme upscaling artifacts
-        let scale = Math.max(Math.min(scaleFit, MAX_SCALE), MIN_SCALE);
-
-        // If we ended up larger than the fit (scale > scaleFit), expand the box height to keep full content visible
-        const scaledH = Math.ceil(contentH * scale);
-        const needGrow = scale > scaleFit || scaledH > boxH;
-        if (needGrow) {
-          viewerBox.style.height = scaledH + 'px';
-        } else {
-          // Reset to CSS var height in case it was expanded earlier
-          viewerBox.style.height = '';
-        }
-
-        // Apply scale: set wrapper to intrinsic size, then transform
-        scaleWrapper.style.width     = contentW + 'px';
-        scaleWrapper.style.height    = contentH + 'px';
-        scaleWrapper.style.transform = `scale(${scale})`;
-
-        // Hide scrollbars inside the embedded page (same-origin only)
-        if (body) body.style.overflow = 'hidden';
-        el.style.overflow = 'hidden';
-
-        // Optionally hide dropdowns/toolbars inside the embedded page
+        // Optional: hide controls inside the embedded page if present
         doc.querySelectorAll('select, .papaya-toolbar, #papayaToolbar, .papayaMenu, .papaya-control')
-           .forEach(n => n.style.display = 'none');
-
-      } catch (e) {
-        // Cross-origin: cannot access the embedded document; ignore.
-        console.warn('fitEmbeddedViewer skipped (cross-origin):', e);
-      }
+           .forEach(n => n.style.display='none');
+      }catch(e){ /* cross-origin -> ignore */ }
     }
 
-    /* On selection: load iframe & CSV, then fit the embedded viewer */
-    selectEl.addEventListener('change', async (e) => {
-      const name = e.target.value;
-      if (!name) { maskFrame.src = ''; tableContainer.innerHTML = ''; return; }
+    selectEl.addEventListener('change', async (e)=>{
+      const name=e.target.value;
+      if(!name){ maskFrame.src=''; tableContainer.innerHTML=''; return; }
 
-      // Load the HTML page for the selected dimension
-      maskFrame.onload = () => {
-        // Run multiple times to account for late image draws inside the embedded page
-        fitEmbeddedViewer();
-        setTimeout(fitEmbeddedViewer, 150);
-        setTimeout(fitEmbeddedViewer, 400);
-      };
+      maskFrame.onload = () => { fitIframeToContent(); setTimeout(fitIframeToContent, 150); };
       maskFrame.src = `${htmlBase}/${name}.html`;
 
-      // Load CSV and render as a table
       tableContainer.textContent = 'Loading CSV…';
-      try {
+      try{
         const resp = await fetch(`${csvBase}/${name}.csv`);
-        if (!resp.ok) throw new Error(`CSV ${name} not found (${resp.status})`);
-        let text = (await resp.text()).replace(/^\uFEFF/, '');           // strip BOM if present
-        const rows = text.trim().split(/\r?\n/).map(line => line.split(','));  // simple CSV split
-        if (!rows.length || !rows[0].length) { tableContainer.textContent = 'CSV is empty or malformed.'; return; }
+        if(!resp.ok) throw new Error(`CSV ${name} not found (${resp.status})`);
+        let text = (await resp.text()).replace(/^\uFEFF/, '');
+        const rows = text.trim().split(/\r?\n/).map(line => line.split(','));
+        if(!rows.length || !rows[0].length){ tableContainer.textContent='CSV is empty or malformed.'; return; }
 
-        // Replace header (or insert one if missing)
         const looksLikeHeader = /[A-Za-z]/.test(rows[0].join(''));
-        if (looksLikeHeader) rows[0] = DISPLAY_HEADER.slice(0, rows[0].length);
+        if(looksLikeHeader) rows[0] = DISPLAY_HEADER.slice(0, rows[0].length);
         else rows.unshift(DISPLAY_HEADER.slice(0, rows[0].length || DISPLAY_HEADER.length));
 
         renderTable(rows);
-      } catch (err) {
+      }catch(err){
         console.error(err);
         tableContainer.textContent = 'Unable to load CSV data.';
       }
     });
 
-    // Re-fit the embedded page when the window size changes
-    window.addEventListener('resize', () => setTimeout(fitEmbeddedViewer, 50));
-
-    // Auto-select the first item on load
+    // Auto-select first on load
     selectEl.value = masks[0].value;
     selectEl.dispatchEvent(new Event('change'));
   </script>
